# mlops-play

./: .gitignore  .pre-commit-config.yaml  Taskfile.yml  data.dvc  pyproject.toml  scratch.ipynb
.dvc/: config
src/: app.py
src/direct/: infer.py  settings.py  train.py
