[project]
name = "mlops-play"
version = "0.1.0"
description = ""
authors = [{ name = "Kenneth V. Domingo", email = "hello@kvd.studio" }]
requires-python = "~=3.12.0"
readme = ""
dependencies = [
    "ray[default,data,train]~=2.0",
    "pandas~=2.0",
    "numpy~=2.0",
    "matplotlib~=3.0",
    "tqdm~=4.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
    "protobuf~=3.0",
    "opencv-contrib-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipython~=9.0",
    "jupyter~=1.0",
    "notebook~=7.0",
    "ruff~=0.0",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP"]
ignore = ["E203", "E266", "E501", "E402"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-wrap-aliases = true

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["pydantic.validator"]
